--- a/tasks/table task/style.css
+++ b/tasks/table task/style.css
@@ -14,7 +14,7 @@ div.container {
 div.content {
     background: rgba(255, 255, 255, 0.5);
     /* padding: 20px; */
-    margin: 20px 20px 20px;
+    margin: 50px 20px 30px;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
@@ -27,10 +27,36 @@ div.content {
     border-radius: 10px;  
     display: flex; 
     align-items: center; 
-    justify-content: center; 
+    justify-content: space-between; 
+}
+#Customers-orders h1 {
+    margin: 10px;
+}
+#export{
+    width: 20px;
+    height: 20px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 50%;
+    padding: 5px;
+}
+.Search-data {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 400px;
+    padding: 20px 20px;
+    background-color: rgba(255, 255, 255, 0.3);
+    color: rgb(0, 0, 0);
+    border-radius: 30px;
+    justify-content: space-between;
 }
 
-
+.Search-data img {
+    width: 16px;
+    margin-left: 10px;
+    position: absolute;
+    right: 10px;
+}
 
 
 
@@ -67,13 +93,9 @@ div.content {
     background-color: rgba( 255,255, 255, 0.7)
 }
 
-
-
-
 .fa-solid.fa-arrow-up ,.fa-solid.fa-circle-arrow-down,.fa-solid.fa-arrow-down {
     margin-left: 10px;
 }
-
 
 .Table tr td:nth-child(2) {
     color: rgb(155, 88, 210, 1); 
@@ -91,16 +113,16 @@ div.content {
   }
   
   .status {
-    margin: 6px 10px; 
-    display: inline-block;
-    padding: 10px 30px; 
-    background-color: #f1fa6bdb; 
-    color: rgb(0, 0, 0); 
+    margin: 6px auto; 
+    display: flex;
+    align-items: center; /* Vertical centering */
+    justify-content: center; /* Horizontal centering */
+    padding: 10px 30px;   
     border-radius: 30px; 
     text-align: center; 
     width: calc(100% - 40px); 
     position: relative; 
-    overflow: hidden; /
+    overflow: hidden; 
 }
 
 .status::before,
@@ -122,3 +144,21 @@ div.content {
     right: -50%;
 }
 
+.status.pending{
+    background-color: rgba(234, 197, 116, 0.5);
+    color: rgb(0, 0, 0);
+}
+.status.cancelled{
+    background-color: rgba(216, 146, 162, 0.7);
+    color: rgb(255, 44, 86)    ;
+}
+
+.status.delivered{
+    background-color: rgba(135, 228, 156, 0.5);
+
+    color: rgb(80, 181, 108);
+}
+.status.shipped{
+    background-color: rgba(111, 203, 235, 0.5)    ;
+    color: black;
+}
