--- a/tasks/figma task/style.css
+++ b/tasks/figma task/style.css
@@ -70,7 +70,10 @@ p{
 h1 {
     font-size: 60px;
 }
-
+h2{
+    font-size: 92px;
+    li
+}
 h3 {
     font-size: 42px;
 }
@@ -262,4 +265,115 @@ rectangle {
 }
 .cm-feedback p, .eb-feedback p{
     margin-bottom: 30px;
+}
+.why-aro{
+    text-align: center;
+    height: 200vh;
+}
+.why-aro-flexbox{
+    display: flex;
+   
+   justify-content: center;
+    gap: 32px;
+}
+.why-aro h5{
+    margin:60px auto 112px;
+    line-height: 30px;
+    font-size: 18px;    
+}
+.why-aro h1{
+    margin-top: 140px;
+  line-height: 33px; 
+}
+.why-aro img{
+    height: 360px;
+}
+.aro-flexbox p{
+    font-size: 27px;
+    line-height: 35px;
+    margin: 27px auto 10px;
+}
+.aro-flexbox{
+    text-align:start;
+     align-items: stretch; */
+    
+    display: flex; 
+    flex-direction: column;
+    gap: 18px;
+    
+}
+.interactions {
+    height: 240vh;
+    /* padding: 0 160px; */
+    text-align: center;
+}
+.interactions h2{
+    margin-top: 400px;
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 300px);
+    gap: 15px;
+}
+
+.grid-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* overflow: hidden; */
+    border: 15px solid #fff;
+    position: relative; 
+}
+
+.grid-container :first-child {
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 1;
+}
+
+.grid-container :nth-child(2) {
+    grid-column: 1 / span 1;
+    grid-row: 2 / span 1;
+}
+
+.grid-container :nth-child(3) {
+    grid-column: 2 / span 2;
+    grid-row: 1 / span 2;
+}
+
+
+
+.grid-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    border: 15px solid #fff;
+    position: relative; 
+}
+
+.grid-item img {
+    height: 100%;
+    object-fit: cover; 
+    position: absolute;
+}
+
+.grid-item-text {
+    position: absolute;
+    text-align: center;
+    color: #fff;
+    z-index: 1; /* Ensure text is above the image */
+}
+
+.grid-item-text rectangle {
+    background-color: var(--button-color);
+    color: black;
+    padding: 30px 10px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 80px;
+    width: 160px;
+    display: flex;
+    flex-direction: column;
+    margin: 20px auto ;
 }
