--- a/tasks/figma task/styles.css
+++ b/tasks/figma task/styles.css
@@ -3,7 +3,7 @@
 }
 
 html {
-  font-size: 10px;
+  font-size: 1vw;
 }
 
 * {
@@ -40,7 +40,7 @@ nav {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./assets/images/Intro.png");
   background-size: cover;
   padding: 20rem 0;
-  width: 100vw;
+  /*  width: vw;100 */
   background-position: center center;
   background-repeat: no-repeat;
   display: flex;
@@ -74,15 +74,15 @@ h1 {
 }
 
 h2 {
-  font-size: 9rem;
+  font-size: 9.2rem;
 }
 
 h3 {
-  font-size: 4rem;
+  font-size: 4.2rem;
 }
 
 h4 {
-  font-size: 6rem;
+  font-size: 5.8rem;
 }
 
 h5 {
@@ -133,10 +133,9 @@ h6 {
   margin-bottom: 2px;
 }
 
-.introducing-img img {
-  width: 100%;
-}
-
+/* .introducing-img img{
+    width: 100%;
+} */
 .aro {
   display: flex;
   margin: 120px 0;
@@ -276,12 +275,19 @@ rectangle {
 }
 
 .feedback {
+  padding: 5rem 0;
   color: #fff;
   display: flex;
-  align-items: center;
+  /* align-items: center;  */
   justify-content: space-between;
   gap: 40px;
   width: 100%;
+}
+
+.sm-feedback, .cm-feedback, .eb-feedback {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
 
 .sm-feedback p {
@@ -304,7 +310,6 @@ rectangle {
 }
 
 .why-aro h5 {
-  margin: 60px auto 112px;
   line-height: 30px;
   font-size: 1.8rem;
 }
@@ -315,7 +320,7 @@ rectangle {
 }
 
 .why-aro img {
-  height: auto;
+  height: 25vw;
 }
 
 .aro-flexbox p {
@@ -333,7 +338,7 @@ rectangle {
 }
 
 .interactions {
-  height: 200vh;
+  /*  height: 200vh; */
   /* padding: 0 160px; */
   text-align: center;
 }
@@ -502,24 +507,49 @@ rectangle {
   gap: 1.2em;
 }
 
-@media (max-width: 768px) {
-  .intro-content-text h1 {
-    font-size: 4rem;
+@media (max-width: 992px) {
+  html {
+    font-size: 1vw;
   }
   .intro {
-    padding: 8rem;
+    padding: 10rem 0;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
   .introducing {
-    display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 2rem;
   }
-}
-@media (max-width: 582px) {
-  .intro-content-text h1 {
-    font-size: 3rem;
+  .aro {
+    flex-direction: column;
+    gap: 2rem;
   }
-  .intro {
-    padding: 6rem;
+  .aro-two {
+    flex-direction: column;
+  }
+  .feedback {
+    flex-direction: column;
+    gap: 4em;
+  }
+  .why-aro-flexbox {
+    flex-direction: column;
+  }
+  .aro-flexbox {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+  .aro-flexbox p {
+    margin: 0;
+  }
+  .introducing-text {
+    align-items: center;
+  }
+  .footer {
+    flex-direction: column;
+    gap: 2em;
+  }
+  .policy {
+    flex-wrap: nowrap;
   }
 }/*# sourceMappingURL=styles.css.map */
-/*# sourceMappingURL=styles.css.map */
