--- a/tasks/figma task/styles.css
+++ b/tasks/figma task/styles.css
@@ -3,7 +3,7 @@
 }
 
 html {
-  font-size: 1vw;
+  font-size: 10px;
 }
 
 * {
@@ -145,6 +145,10 @@ h6 {
   align-items: center;
 }
 
+.aro p {
+  border-bottom: 2px solid rgba(177, 108, 234, 0.102);
+}
+
 .aro-text {
   display: flex;
   flex-direction: column;
@@ -197,23 +201,39 @@ rectangle {
   color: #fff;
 }
 
-.aro-in-action-text p {
-  margin: 30px auto 60px;
+.aro-in-action-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 4rem;
+  justify-content: flex-start;
 }
 
+/* .aro-in-action-text p{
+    margin: 30px auto 60px;
+
+} */
 .aro-two {
   display: flex;
   /* margin: 120px 0; */
-  padding: 90px;
+  padding: 90px 0;
   justify-content: center;
   gap: 150px;
   align-items: center;
+}
+
+rectangle-2 {
+  height: 2px;
+  background-color: rgba(177, 108, 234, 0.102);
 }
 
 .aro-in-action button {
   padding: 58px;
 }
 
+/* .aro-two>.aro-text>h5{
+    border-bottom:  solid rgba(36, 22, 11, 0.122);
+} */
 .watch-now {
   display: flex;
   gap: 16px;
@@ -229,10 +249,9 @@ rectangle {
   margin-top: 10px;
 }
 
-.aro-two rectangle {
-  width: 126px;
-}
-
+/* .aro-two rectangle{
+    width: 126px;
+} */
 /* .extra-padding{
     display: flex;
     align-items: center;
@@ -291,7 +310,7 @@ rectangle {
 }
 
 .sm-feedback p {
-  margin-bottom: 60px;
+  margin-bottom: 30px;
 }
 
 .cm-feedback p, .eb-feedback p {
@@ -300,7 +319,7 @@ rectangle {
 
 .why-aro {
   text-align: center;
-  height: 200vh;
+  /*    height: 200vh; */
 }
 
 .why-aro-flexbox {
@@ -314,13 +333,17 @@ rectangle {
   font-size: 1.8rem;
 }
 
+.why-aro > h5 {
+  margin-bottom: 30rem;
+}
+
 .why-aro h1 {
   margin-top: 140px;
   line-height: 33px;
 }
 
 .why-aro img {
-  height: 25vw;
+  height: 35rem;
 }
 
 .aro-flexbox p {
@@ -331,7 +354,6 @@ rectangle {
 
 .aro-flexbox {
   text-align: start;
-  align-items: stretch;
   display: flex;
   flex-direction: column;
   gap: 18px;
@@ -341,6 +363,7 @@ rectangle {
   /*  height: 200vh; */
   /* padding: 0 160px; */
   text-align: center;
+  margin: 25rem 0;
 }
 
 .interactions p {
@@ -507,9 +530,15 @@ rectangle {
   gap: 1.2em;
 }
 
+/* @media(max-width:1200px){
+    html{
+        font-size: 10px;
+        gap: 6rem;
+    }
+} */
 @media (max-width: 992px) {
   html {
-    font-size: 1vw;
+    font-size: 10px;
   }
   .intro {
     padding: 10rem 0;
@@ -523,14 +552,21 @@ rectangle {
   }
   .aro {
     flex-direction: column;
-    gap: 2rem;
+    align-items: center;
+    gap: 4rem;
   }
-  .aro-two {
-    flex-direction: column;
-  }
+  /*  .aro-text{
+       text-align: center;
+   } */
   .feedback {
     flex-direction: column;
     gap: 4em;
+  }
+  .aro-flexbox p {
+    line-height: 4rem;
+  }
+  .why-aro h5 {
+    line-height: 2.5rem;
   }
   .why-aro-flexbox {
     flex-direction: column;
@@ -542,6 +578,13 @@ rectangle {
   .aro-flexbox p {
     margin: 0;
   }
+  .display-none {
+    display: none;
+  }
+  .grid-container :nth-child(3) {
+    grid-column: 1/span 3;
+    grid-row: 1/span 2;
+  }
   .introducing-text {
     align-items: center;
   }
@@ -551,5 +594,53 @@ rectangle {
   }
   .policy {
     flex-wrap: nowrap;
+  }
+  .footer-intro-text {
+    flex-wrap: wrap;
+  }
+}
+@media (max-width: 576px) {
+  html {
+    font-size: 7px;
+  }
+  .aro-text {
+    text-align: center;
+    gap: 5rem;
+  }
+  .featured-in {
+    gap: 4rem;
+  }
+  .featured-in-icons {
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    row-gap: 4rem;
+  }
+  .aro-in-action {
+    height: auto;
+  }
+  .aro-in-action-text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 4rem;
+    margin: 20rem 0;
+  }
+  .aro-two {
+    flex-direction: column;
+  }
+  .aro-in-action button {
+    padding: 32px;
+  }
+  .aro-flexbox {
+    flex-direction: column;
+  }
+  .why-aro-flexbox {
+    gap: 15rem;
+  }
+  .why-aro img {
+    height: auto;
+  }
+  .why-aro > h5 {
+    margin-bottom: 15rem;
   }
 }/*# sourceMappingURL=styles.css.map */
