--- a/tasks/games/dice-game/style.css
+++ b/tasks/games/dice-game/style.css
@@ -5,15 +5,23 @@ body {
   padding: 0;
   color: #ffffff;
 }
+h1{
+  margin-top: 4rem;
+}
 .dice-game {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 #dices-main {
-  margin-top: 150px;
+  margin-top: 3rem;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  gap: 50px;
+}
+.dices{
+  display: flex;
   gap: 50px;
 }
 .dice , .dice2{
@@ -24,6 +32,11 @@ body {
   width: 120px;
   height: 120px;
   border-radius: 10%;
+}
+#players{
+  display: flex;
+  gap: 50px;
+  justify-content: space-around;
 }
 .dot {
   display: block;
@@ -79,4 +92,35 @@ body {
 .five .dot:nth-child(3) {
   grid-column: 1 / span 2;
   justify-self: center;
+}
+#buttons{
+  margin: 4rem auto 0;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+#play ,#change-name{
+  /* margin: 80px auto; */
+  display: block; 
+  background-color: #a2ff9298;
+  padding: 10px;
+  width: 18rem;
+  height: 70px;
+  border-radius: 15px;
+  border: none; 
+  text-align: center;
+  font-size: 1rem;
+  color: #333; 
+  cursor: pointer; 
+  transition: background-color 0.3s, transform 0.3s; 
+}
+
+#play:hover , #change-name:hover {
+  background-color: #ffffffcc;
+  transform: scale(1.05); 
+}
+
+#play:active #change-name:active{
+  background-color: #ffffff88; 
+  transform: scale(0.95); 
 }
